--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                         <li>
                             <a href="#">Pages</a>
                             <ul class="submenu">
-                                <li><a href="instructor.html">Page 1</a></li>
-                                <li><a href="cart.html">Page 2</a></li>
-                                <li><a href="checkout.html">Page 3</a></li>
-                                <li><a href="login.html">Page 4</a></li>
-                                <li><a href="Register.html">Page 4</a></li>
+                                <li><a href="#">Page 1</a></li>
+                                <li><a href="#">Page 2</a></li>
+                                <li><a href="#">Page 3</a></li>
+                                <li><a href="#">Page 4</a></li>
+                                <li><a href="#">Page 4</a></li>
                             </ul>
                         </li>
 
