--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     
                     <div class="course-hover-content">
                         <div class="price"></div>
-                        <h3 class="course-title mb-20 mt-30"> <a href="#">Data Competitive Strategy law & Organization </a> </h3>
+                        <h3 class="course-title mb-20 mt-30"> <a href="#">Short header </a> </h3>
                         <div class="course-meta d-flex align-items-center mb-20">
                             <div class="author me-4">
                                 <img src="assets/images/course/course-2.jpg" alt="" class="img-fluid">
